<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Association</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ButtonNewGame">Новая игра</string>
    <string name="ButtonContinue">Продолжить</string>
    <string name="ButtonRegulation">Правила</string>
    <string name="ButtonHelp">Подсказка</string>
    <string name="ButtonInformation">О программе</string>
    <string name="ButtonEasy">Легкая</string>
    <string name="ButtonMedium">Средняя</string>
    <string name="ButtonHard">Сложная</string>
    <string name="TextRegulations">\tПредлагаем тебе сыграть в интересную логическую игру для детей \"Подбери пару\", в которой тебе предстоит проявить всю свою сообразительность! В каждом из трёх уровней сложности ты увидишь 8 квадратов, соединенных попарно. На левом квадрате уже нарисована картинка, а правый пока еще пустой. Твоя задача - подобрать такую картинку на правом квадрате, которая составит логическую пару с картинкой на левом квадрате. Для этого нужно просто нажимать по квадрату до тех пор, пока не появится правильный вариант. \n\tПомни, что в каждом уровне нужно составить четыре правильные пары, чтобы перейти к следующему уровню.\n\tЕсли ты не можешь отгадать правильную картинку, то можешь использовать подсказку, которая укажет тебе квадрат в котором закралась ошибка.</string>
    <string name="ButtonStatistics">Статистика</string>
    <string name="ButtonMusic">Музыка</string>
    <string name="LevelIsPassed">Уровень пройден!</string>
    <string name="YouTimeIs">Ваше время:</string>
    <string name="NextLevel">Следующий уровень</string>
    <string name="EasyTime">Легкий уровень:</string>
    <string name="MediumTime">Средний уровень:</string>
    <string name="HardTime">Сложный уровень:</string>
    <string name="None">- -</string>
    
    
    

</resources>
