 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/texture"
    >

    <TableRow 
        android:id="@+id/StringMenu01"
        android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:gravity="center"
  android:layout_marginBottom="10sp"
  android:layout_marginTop="10sp"
        >
        
        <Button
            android:id="@+id/ButtonNewGame"
            android:text="@string/ButtonNewGame"
            android:layout_height="80dp"
            android:layout_width="120dp"
            android:background="@drawable/texture_button"
            android:textStyle="normal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="-10dp"
            
            >
        </Button>
        
        <Button
            android:id="@+id/ButtonContinue"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/ButtonContinue" 
            android:background="@drawable/texture_button"
            android:textStyle="normal"
            android:layout_marginRight="-10dp"
            android:layout_marginLeft="10dp"
           
            />

      </TableRow>
      
     <TableRow 
        android:id="@+id/StringMenu02"
        android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:gravity="center"
  android:layout_marginBottom="10dp"
 >

            <Button
                android:id="@+id/ButtonRegulations"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@drawable/texture_button"
                android:text="@string/ButtonRegulation" 
                android:textStyle="normal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="-10dp"
                />

            <Button
                android:id="@+id/ButtonStatistics"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@drawable/texture_button"
                android:text="@string/ButtonStatistics" 
                android:layout_marginRight="-10dp"
                android:layout_marginLeft="10dp"
                />

    </TableRow>

      <TableRow 
        android:id="@+id/StringMenu03"
        android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:gravity="center"
  android:layout_marginBottom="10dp"
 >

          <ImageView
              android:id="@+id/ButtonMusic"
              android:layout_width="80dp"
              android:layout_height="40dp"
              android:layout_marginLeft="180dp"
              android:layout_marginRight="-180dp"
              android:background="@drawable/sound1" />

    </TableRow>
     
       </TableLayout>